# Eridani-Psi-Gn-z11

./: .gitignore  .travis.yml  CMakeLists.txt  lazy-winstall.ps1  makefile  properties.make
src/: EridaniPsi.h
src/genetic-foolery/: BocesPacker2DViz.html  BoxesPacker2D.cpp  CMakeLists.txt  GenoFun.cpp  GenoFun.hpp  OneDayOneLTabler.cpp  OneDayOneLTablerHPars.h  OneDayOneLTablerMulti.cpp  OneDayOneLTablerViz.html
src/lib/: CMakeLists.txt
src/lib/main/: maeth.c  maeth.h
src/lib/main/openga/: openga.h  openga_connector.cpp
src/lib/main/util/: Logger.h  Logging.h  Macros.h  MacrosForeach.h  Memory.h
src/lib/test/: CMakeLists.txt  TestMacros.c  TestOpenGA.c  Tests.h  test.c
src/testsframework/: CMakeLists.txt
src/testsframework/api/: ComposedUnitTest.h  TestSuiteMain.h  TestingMacros.h  UnitTest.h
src/testsframework/main/: TestingFrameworkInternals.c
src/util/: Memory.c
travis/: install.linux.sh  install.win.sh  test_debug.gdbinit  test_debug.sh
